better documentation filled some DTO, mapper and made tests
